--- a/Calculater/index.css
+++ b/Calculater/index.css
@@ -1,12 +1,12 @@
 body{
-    background-color: antiquewhite;
+    /* background-color: darkblue; */
     font-weight: 100;
 }
 *{
     font-family: cursive;
 }
 .main_container{
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +16,7 @@ body{
     flex-direction: column;
     background-color: #17171C;
     padding: 20px;
-    border: 0px;
+    border: 1px solid white;
     border-radius: 10px;
     height: auto;
     width: 370px;
@@ -30,7 +30,7 @@ body{
     justify-content: flex-end;
     color: white;
     height: 150px;
-    font-size: 25px;
+    font-size: 30px;
     font-family: cursive;
     width: 100%;
 }
@@ -42,7 +42,7 @@ body{
     color: white;
     height: 150px;
     text-align: end;
-    font-size: 25px;
+    font-size: 30px;
     width: 100%;
     height: 50%;
     background-color: #17171C;
@@ -85,4 +85,9 @@ body{
 
 .rows button:hover{
     background-color: #474852;
+}
+
+
+@media screen {
+    
 }
